--- a/FLEX/layout/css/style_3.css
+++ b/FLEX/layout/css/style_3.css
@@ -114,6 +114,7 @@ a{
 }
 
 .copyright{
+    /*margin-top: auto > to push the element to the bottom*/
     background-color: #eee;
     padding: 16px;
 }
