--- a/FLEX/layout/layout_3.html
+++ b/FLEX/layout/layout_3.html
@@ -55,7 +55,7 @@
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente veritatis accusantium, commodi modi excepturi labore officia doloribus exercitationem si quam earum impedit placeat, eum officiis magnam deserunt neque obcaecati iusto. Nihil, illo. Facilis fugiat repellat tempora sed quis, repudiandae reiciendis voluptate tenetur unde molestias voluptatum nisi dicta odio sequi sunt debitis, saepe sint ut ipsam exercitationem ratione qui? Laborum, alias? Error molestias iure sunt nobis maxime velit ipsam, quia inventore! Facere facilis id ducimus at sint quas, beatae, aspernatur sapiente sequi officia ipsa saepe excepturi deserunt doloremque perspiciatis eque voluptate.</p>
                 </nav>
                 <div class="copyright">
-                    <p>Copyright © 2017</p>
+                    <p>Copyright &copy 2017</p>
                 </div>
             </section>
 
